[package]
name = "asn1-exp"
version = "0.0.1"
authors = ["Anton Kondrachkov <sx91@protonmail.com>"]
description = "Experimental ASN.1 serialization/deserialization library."
license = "MIT"

[features]
with-serde = ["serde", "serde_bytes", "serde_derive"]
default = ["with-serde"]

[dependencies]
clippy = {version = "*", optional = true}
serde = { version = "^1.0", optional = true }
serde_derive = { version = "^1.0", optional = true }
serde_bytes = { version = "^0.10", optional = true }

[dev-dependencies]
quickcheck = "^0.4"
quickcheck_macros = "^0.4"
